--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="src\assets\img\Versequest_White.png"/>
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Embark on an epic journey through Legacy of the Sunstone — an immersive interactive adventure crafted by the Versequest team.">
     <title>Legacy of the Sunstone - Adventure Game</title>
