--- a/index.html
+++ b/index.html
@@ -14,23 +14,9 @@
       gtag('js', new Date());
       gtag('config', 'G-RSG9B653PZ');
     </script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-      :root {
-        --font-heading: 'Cinzel', serif;
-        --font-body: 'Open Sans', sans-serif;
-      }
-      body {
-        font-family: var(--font-body);
-      }
-      h1, h2, h3, h4, h5, h6 {
-        font-family: var(--font-heading);
-      }
-    </style>
+    <!-- Remove Google Fonts and custom font CSS -->
   </head>
-  <body>
+  <body class="font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
